Sample content creator